--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL = 'http://localhost:1001'
+# VITE_BACKEND_URL = 'http://localhost:1001'
+VITE_BACKEND_URL=https://auth-application-fxbk.onrender.com
